# VIPV-surCO-Reader

./: README.md
src/python-parser/: README.md  pyproject.toml
src/python-parser/measurements_parser/: __init__.py  session_data_v1.py  session_data_v3.py  session_factory.py
src/python-parser/surco_parser/: __init__.py  session_data_v1.py  session_data_v3.py  session_data_v4.py  session_data_v5.py  session_factory.py
src/python-parser/test/: test_session_data_v1.py  test_session_data_v3.py  test_session_data_v4.py
src/python-parser/test/data/: v1_body.txt  v1_header.txt  v3.txt  v4.txt
